View User tasks author removed

--- a/social_task_assignment.info.yml
+++ b/social_task_assignment.info.yml
@@ -5,9 +5,10 @@ package: Social
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
-  - social_group
-  - webform
-  - webform_views
-  - twig_field_value
-  - lazy
-  - social_task_assignment_vbo
+  - social_group:social_group
+  - webform:webform
+  - webform_views:webform_views
+  - twig_field_value:twig_field_value
+  - lazy:lazy
+  - social_task_assignment_vbo:social_task_assignment_vbo
+  - token_views_filter:token_views_filter
